de alaia a medg

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Alaia </title>
+        <title>MEDG</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -57,16 +57,15 @@
                                 <nav>                              
                                     <ul id="navigation">    
                                         <li><a href="our_story.html"> Nosotros</a></li>
-                                        <li><a href="location.html">Lugar</a></li>
+                                        <li><a href="location.html">Eventos</a></li>
                                         <li><a href="gallery.html">Galería</a></li>
                                         <li><a href="booking.html">Tienda</a></li>
-                                        <li><a href="#">Instructivos</a>
+                                        <!-- <li><a href="#">Instructivos</a>
                                             <ul class="submenu">
                                                 <li><a href="blog.html">Pack emprendedores</a></li>
                                                 <li><a href="single-blog.html">Tabla de talles</a></li>
-                                                <!-- <li><a href="elements.html">Element</a></li> -->
                                             </ul>
-                                        </li>
+                                        </li> -->
                                         <li><a href="contact.html">Contacto</a></li>
                                     </ul>
                                 </nav>
@@ -87,15 +86,15 @@
         <!-- Slider Area Start-->
         <div class="slider-area ">
             <div class="slider-active">
-                <div class="single-slider slider-height hero-overly d-flex align-items-center" data-background="assets/img/hero/homeHero_1.jpg">
+                <div class="single-slider slider-height hero-overly d-flex align-items-center" data-background="assets/img/hero/homeHero_1.png">
                     <div class="container">
                         <div class="row d-flex align-items-center">
                             <div class="col-lg-7 col-md-9 ">
                                 <div class="hero__caption text-center d-flex align-items-center caption-bg">
                                    <div class="circle-caption">
-                                        <span  data-animation="fadeInUp" data-delay=".3s">Otoño - Invierno</span>
-                                        <h1  data-animation="fadeInUp" data-delay=".5s">Pack emprendedores</h1>
-                                        <p  data-animation="fadeInUp" data-delay=".9s">Conocé nuestras promos</p>
+                                        <span  data-animation="fadeInUp" data-delay=".3s">Disponible</span>
+                                        <h1  data-animation="fadeInUp" data-delay=".5s">Curso Online</h1>
+                                        <p  data-animation="fadeInUp" data-delay=".9s">Introducción a El Método EDG</p>
                                    </div>
                                 </div>
                             </div>
@@ -113,7 +112,7 @@
                     <div class="col-lg-4">
                         <div class="singl-services text-center mb-60">
                             <div class="top-caption">
-                                <h4>Calzas</h4>
+                                <h4>Libro físico</h4>
                                 <p>Temporada otoño-invierno</p>
                             </div>
                             <div class="services-img">
@@ -123,14 +122,13 @@
                                 </div>
                             </div>
                             <div class="bottom-caption">
-                                <span>OTOÑO INVIERNO</span>
-                                <p>Del talle S al XXL<br>Lisos y floreados</p>
+                                <p>Compre aquí</p>
                             </div>
                         </div> 
                     </div><div class="col-lg-4">
                         <div class="singl-services text-center mb-60">
                             <div class="top-caption">
-                                <h4>Bikers</h4>
+                                <h4>Ebook</h4>
                                 <p>Temporada otoño-invierno</p>
                             </div>
                             <div class="services-img">
@@ -140,14 +138,13 @@
                                 </div>
                             </div>
                             <div class="bottom-caption">
-                                <span>OTOÑO INVIERNO</span>
-                                <p>Del talle S al XXL<br>Lisos y floreados</p>
+                                <p>Descargue aquí</p>
                             </div>
                         </div> 
                     </div><div class="col-lg-4">
                         <div class="singl-services text-center mb-60">
                             <div class="top-caption">
-                                <h4>Tops</h4>
+                                <h4>Curso Online</h4>
                                 <p>Temporada otoño-invierno</p>
                             </div>
                             <div class="services-img">
@@ -157,8 +154,7 @@
                                 </div>
                             </div>
                             <div class="bottom-caption">
-                                <span>OTOÑO INVIERNO</span>
-                                <p>Del talle S al XXL<br>Lisos y floreados</p>
+                                <p>Inscribase aquí</p>
                             </div>
                         </div> 
                     </div>
@@ -281,8 +277,8 @@
                         <div class="story-caption">
                             <img src="assets/img/our_story/flower_right.png" alt="">
                             <h3>Quienes somos</h3>
-                            <p class="story1">En ALAIA, somos una tienda de ropa deportiva femenina que combina funcionalidad y estilo. Nuestro objetivo es ayudarte a alcanzar tus metas con prendas de alta calidad, diseñadas para brindarte comodidad y confianza mientras te mueves. Además, nos enorgullece ser una comunidad que te apoya en tu viaje, donde la estética y el deporte se unen para crear una experiencia única y empoderadora.</p>
-                            <p class="story2">¡Únete a ALAIA y descubre una nueva forma de vivir, donde la belleza y el movimiento se fusionan!</p>
+                            <p class="story1">Los talleres de danza dictados mediante el Método EDG buscan generar un espacio de movimiento para promover la salud mental y física de los alumnos. Se desarrollan nuevas iniciativas que proponen hacer un llamado a la curiosidad por nuevos aprendizajes, se invita a los mayores a reflexionar sobre sí mismos, a ejercitar su memoria, a profundizar la conciencia de su propio cuerpo, a desarrollar su imagen corporal y las posibilidades de movimiento (dejando de lado las dificultades) para ampliar con alegría y musicalidad la danza y la expresión corporal. La gran diferencia de éste método, con otras técnicas de movimiento que tienen en cuenta a los adultos mayores, es que en este caso las actividades están centradas en las personas que tienen un alto grado de dependencia.</p>
+                            <p class="story2"> Profesores de Danza (en todas las especialidades) egresados de instituciones terciarias o universitarias, o profesionales con una trayectoria equivalente comprobable podrán realizar el Curso Online o en formato de seminario para estar habilitados en el dictado de clases de Método EDG. Luego podrán seguir formándose con especializaciones dentro del Método, en talleres y seminarios virtuales o presenciales. Una vez obtenido el certificado, los profesores figurarán en el listado de ésta página web, para la consulta de instituciones geriátricas.</p>
                         </div>
                     </div>
                 </div>
@@ -324,9 +320,9 @@
                                     <div class="col-lg-12 mb-30">
                                         <div class="select-itms">
                                             <select name="select" id="select2">
-                                                <option value="">Compra mayorista</option>
-                                                <option value="">Compra de franquicia</option>
-                                                <option value="">Mandar saludos</option>
+                                                <option value="">Curso online</option>
+                                                <option value="">Ebook</option>
+                                                <option value="">Libro</option>
                                             </select>
                                         </div>
                                     </div>
@@ -361,7 +357,7 @@
 
         <!-- ================ Map ================= -->
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3174.9771499749863!2d-56.98637062305225!3d-37.27196894162703!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959b609a0e786f8f%3A0xe664129d9367d609!2sP.%C2%BA%20121%20%26%20Av.%203%2C%20Villa%20Gesell%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1689310344749!5m2!1ses!2sar" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d201170.11282340868!2d-57.76534512222323!3d-38.01718112809973!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584d94d19d34209%3A0xdd9670804bfed126!2sMar%20del%20Plata%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1689845205517!5m2!1ses!2sar" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
          <!-- ================ Map ================= -->
@@ -418,9 +414,9 @@
                                  <div class="footer-pera">
                                      <p class="info1">¡Contactate con nosotros para más detalles!</p>
 
-                                     <p class="info2">alaiatiendanube@gmail.com</p>
-                                     <p class="info2">+54 9 2267 47-4058</p>
-                                     <p class="info2">Paseo 121 entre Av 3 y 4</p>
+                                     <p class="info2">medg@gmail.com</p>
+                                     <p class="info2">+54 9 223 523-1462</p>
+                                     <p class="info2">Mar del plata, Buenos Aires, Argentina</p>
                                 </div>
                              </div>
                          </div>
@@ -431,11 +427,9 @@
                             <div class="footer-tittle">
                                 <h4>Tienda</h4>
                                 <ul>
-                                    <li><a target="_blank" href="https://www.alaiaprendas.com.ar/packs-emprendedores/">Pack emprendedores</a></li>
-                                    <li><a target="_blank" href="https://www.alaiaprendas.com.ar/top/">Tops</a></li>
-                                    <li><a target="_blank" href="https://www.alaiaprendas.com.ar/calzas/">Calzas</a></li>
-                                    <li><a target="_blank" href="https://www.alaiaprendas.com.ar/biker/">Bikers</a></li>
-                                    <li><a target="_blank" href="https://www.alaiaprendas.com.ar/packs-3-bikinis-x-3000/">Bikinis</a></li>
+                                    <li><a target="_blank" href="https://www.instagram.com/metodoedg/">Ebook</a></li>
+                                    <li><a target="_blank" href="https://www.instagram.com/metodoedg/">Libro</a></li>
+                                    <li><a target="_blank" href="https://www.instagram.com/metodoedg/">Curso online</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -445,9 +439,9 @@
                             <div class="footer-tittle">
                                 <h4>Redes</h4>
                                 <ul>
-                                    <li><a target="_blank" href="https://www.alaiaprendas.com.ar/">Tienda virtual</a></li>
-                                    <li><a target="_blank" href="https://www.instagram.com/alaiaprendas/">Instagram</a></li>
-                                    <li><a target="_blank" href="https://www.tiktok.com/@alaiaprendas">TikTok</a></li>
+                                    <li><a target="_blank" href="https://www.udemy.com/course/metodo-edg/?referralCode=8B5458B719EFFF9AF82C">Tienda virtual</a></li>
+                                    <li><a target="_blank" href="https://www.instagram.com/metodoedg/">Instagram</a></li>
+                                    <li><a target="_blank" href="https://www.instagram.com/metodoedg/">TikTok</a></li>
                                 </ul>
                             </div>
                         </div>
