--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                                     <ul id="navigation">    
                                         <li><a href="our_story.html"> Nosotros</a></li>
                                         <li><a href="location.html">Eventos</a></li>
-                                        <li><a href="gallery.html">Galería</a></li>
-                                        <li><a href="booking.html">Tienda</a></li>
+                                        <!-- <li><a href="gallery.html">Galería</a></li> -->
+                                        <li><a href="https://www.udemy.com/course/metodo-edg/?referralCode=8B5458B719EFFF9AF82C">Tienda</a></li>
                                         <!-- <li><a href="#">Instructivos</a>
                                             <ul class="submenu">
                                                 <li><a href="blog.html">Pack emprendedores</a></li>
@@ -161,11 +161,10 @@
                 </div>
              </div>
         </div>
-        <!-- Services Area End-->
-        <!-- Modelos start -->
+        <!-- Services Area End
+        Modelos start
         <div class="our-memories-area section-padding2">
             <div class="container">
-                <!-- section tittle -->
                 <div class="row ">
                     <div class="col-lg-12">
                         <div class="section-tittle text-center">
@@ -238,14 +237,11 @@
                     
                 </div>
             </div>
-            <!-- Shape Img -->
             <div class="memories-shape d-none d-xl-block">
                 <img src="assets/img/memories/left-img.png" class="memories-shape1" alt="">
                 <img src="assets/img/memories/right-img.png" class="memories-shape2" alt="">
             </div>
-        </div>
-        <!-- Modelos End-->
-        <!-- Gift Start -->
+        </div>-->
         <!-- <div class="gift-area gift-padding gift-overly" data-background="assets/img/memories/gft.jpg">
             <div class="container">
                 <div class="row">
@@ -429,7 +425,7 @@
                                 <ul>
                                     <li><a target="_blank" href="https://www.instagram.com/metodoedg/">Ebook</a></li>
                                     <li><a target="_blank" href="https://www.instagram.com/metodoedg/">Libro</a></li>
-                                    <li><a target="_blank" href="https://www.instagram.com/metodoedg/">Curso online</a></li>
+                                    <li><a target="_blank" href="https://www.udemy.com/course/metodo-edg/?referralCode=8B5458B719EFFF9AF82C">Curso online</a></li>
                                 </ul>
                             </div>
                         </div>
