seccion "el metodo" + correcciones + links

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                                 <nav>                              
                                     <ul id="navigation">    
                                         <li><a href="our_story.html">Historia</a></li>
+                                        <li><a href="single-blog.html">El Método</a></li>
                                         <li><a href="https://www.udemy.com/course/metodo-edg/?referralCode=8B5458B719EFFF9AF82C" target="_blank">Tienda</a></li>
                                         <li><a href="contact.html">Contacto</a></li>
                                     </ul>
@@ -83,9 +84,9 @@
                             <div class="col-lg-7 col-md-9 ">
                                 <div class="hero__caption text-center d-flex align-items-center caption-bg">
                                    <div class="circle-caption">
-                                        <span  data-animation="fadeInUp" data-delay=".3s">Disponible</span>
-                                        <h1  data-animation="fadeInUp" data-delay=".5s">Curso Online</h1>
-                                        <p  data-animation="fadeInUp" data-delay=".9s">Introducción a <br>El Método EDG</p>
+                                        <span data-animation="fadeInUp" data-delay=".3s">Disponible</span>
+                                        <h1 data-animation="fadeInUp" data-delay=".5s">Curso Online</h1>
+                                        <p data-animation="fadeInUp" data-delay=".9s">Introducción al<br>Método EDG</p>
                                    </div>
                                 </div>
                             </div>
@@ -112,7 +113,7 @@
                                 </div>
                             </div>
                             <div class="bottom-caption">
-                                <p>Compre aquí</p>
+                                <a style="color: black;"href="https://metodoedg.wordpress.com/reservar-mi-libro/" target="_blank">Comprar aquí</a>
                             </div>
                         </div> 
                     </div><div class="col-lg-4">
@@ -128,7 +129,7 @@
                                 </div>
                             </div>
                             <div class="bottom-caption">
-                                <p>Descargue aquí</p>
+                                <a style="color: black;"href="https://metodoedg.wordpress.com/reservar-mi-libro/" target="_blank">Descargue aquí</a>
                             </div>
                         </div> 
                     </div><div class="col-lg-4">
@@ -168,7 +169,7 @@
                             <img src="assets/img/our_story/flower_right.png" alt="">
                             <h3>Mi historia</h3>
                             <p class="story1">Hola, soy Catalina Sánchez Palacios, profesora de danzas argentina dedicada además a la gerontología. Mi viaje en el cruce de ambos temas comenzó en 2015 cuando inicié esta investigación junto con mi primera alumna de 86 años, una experiencia que marcó el inicio de mi compromiso en promover un envejecimiento saludable y activo a través de la danza. Desde entonces, he tenido el honor de trabajar en varias residencias y hogares de la ciudad de Mar del Plata y en domicilios particulares, enriqueciendo mi comprensión y enfoque en la enseñanza de la danza para personas mayores. Entre 2020 y 2021, completé la Formación en Demencia para Cuidadores de iDO Consortium, lo que me ha permitido comprender mejor las necesidades específicas de las personas mayores con demencia y cómo la danza puede desempeñar un papel en su atención y calidad de vida...</p>
-                            <a href="contact.html"><div class="submit-info">
+                            <a href="our_story.html"><div class="submit-info">
                                 <button class="btn2">Ver más</button>
                             </div></a>
                         </div>
@@ -318,8 +319,8 @@
                             <div class="footer-tittle">
                                 <h4>Tienda</h4>
                                 <ul>
-                                    <li><a target="_blank" href="https://www.instagram.com/metodoedg/">Ebook</a></li>
-                                    <li><a target="_blank" href="https://www.instagram.com/metodoedg/">Libro</a></li>
+                                    <li><a target="_blank" href="https://metodoedg.wordpress.com/reservar-mi-libro/">Ebook</a></li>
+                                    <li><a target="_blank" href="https://metodoedg.wordpress.com/reservar-mi-libro/">Libro</a></li>
                                     <li><a target="_blank" href="https://www.udemy.com/course/metodo-edg/?referralCode=8B5458B719EFFF9AF82C">Curso online</a></li>
                                 </ul>
                             </div>
@@ -332,7 +333,7 @@
                                 <ul>
                                     <li><a target="_blank" href="https://www.udemy.com/course/metodo-edg/?referralCode=8B5458B719EFFF9AF82C">Tienda virtual</a></li>
                                     <li><a target="_blank" href="https://www.instagram.com/metodoedg/">Instagram</a></li>
-                                    <li><a target="_blank" href="https://www.instagram.com/metodoedg/">TikTok</a></li>
+                                    <li><a target="_blank" href="https://www.youtube.com/@metodoedg1782">Youtube</a></li>
                                 </ul>
                             </div>
                         </div>
