--- a/our_story.html
+++ b/our_story.html
@@ -56,6 +56,7 @@
                                 <nav>                              
                                     <ul id="navigation">    
                                         <li><a href="our_story.html">Historia</a></li>
+                                        <li><a href="single-blog.html">El Método</a></li>
                                         <li><a href="https://www.udemy.com/course/metodo-edg/?referralCode=8B5458B719EFFF9AF82C" target="_blank">Tienda</a></li>
                                         <li><a href="contact.html">Contacto</a></li>
                                     </ul>
@@ -112,16 +113,42 @@
                         <div class="story-caption">
                             <img src="assets/img/our_story/flower_right.png" alt="">
                             <h4>Mi historia</h4>
-                            <p class="story1">Hola, soy Catalina Sánchez Palacios, profesora de danzas argentina dedicada además a la gerontología.
-                                Mi viaje en el cruce de ambos temas comenzó en 2015 cuando inicié esta investigación junto con mi primera alumna de 86 años, una experiencia que marcó el inicio de mi compromiso en promover un envejecimiento saludable y activo a través de la danza. Desde entonces, he tenido el honor de trabajar en varias residencias y hogares de la ciudad de Mar del Plata y en domicilios particulares, enriqueciendo mi comprensión y enfoque en la enseñanza de la danza para personas mayores.
-                                Entre 2020 y 2021, completé la Formación en Demencia para Cuidadores de iDO Consortium, lo que me ha permitido comprender mejor las necesidades específicas de las personas mayores con demencia y cómo la danza puede desempeñar un papel en su atención y calidad de vida. Además, participé en cursos internacionales relacionados con el arte y la gerontología, como "Dementia and the Arts" de University College London.
-                                En 2020, escribí mi primer libro, "Introducción al Método EDG", una obra que combina mis conocimientos en danza y gerontología y que se ha convertido en una valiosa herramienta para la enseñanza de la danza en geriátricos. El mismo año comencé a dictar el curso de Formación en Método EDG, el cual obtuvo la Declaración de Interés Cultural del Municipio de General Pueyrredón, un reconocimiento que destaca su importancia en la promoción de la salud y el bienestar de las personas mayores.
-                                He tenido el honor de ser entrevistada sobre el Método EDG en programas como "Achatando la Curva", "Modo Danza Revista" y “Revista Inquieta”, lo que ha contribuido a difundir esta valiosa herramienta en el ámbito de la gerontología y la danza.
+                            <p class="story1">Hola, soy <b>Catalina Sánchez Palacios</b>, profesora de danzas argentina dedicada además a la gerontología.
+                                Mi viaje en el cruce de ambos temas comenzó en 2015 cuando inicié esta investigación junto con <b>mi primera alumna 
+                                de 86 años</b>, una experiencia que marcó el inicio de mi compromiso en promover un envejecimiento saludable y activo 
+                                a través de la danza. Desde entonces, he tenido el honor de trabajar en varias residencias y hogares de la ciudad 
+                                de Mar del Plata y en domicilios particulares, enriqueciendo mi comprensión y enfoque en la enseñanza de la danza 
+                                para personas mayores.
+                                Entre 2020 y 2021, completé la Formación en Demencia para Cuidadores de iDO Consortium, lo que me ha permitido 
+                                comprender mejor las necesidades específicas de las personas mayores con demencia y cómo la danza puede desempeñar 
+                                un papel en su atención y calidad de vida. Además, participé en cursos internacionales relacionados con el arte y 
+                                la gerontología, como "Dementia and the Arts" de University College London.
+                                En 2020, escribí <b>mi primer libro</b>, <a target="_blank" href="https://metodoedg.wordpress.com/reservar-mi-libro/" style="color: black;text-decoration: underline;">"Introducción al Método EDG"</a>, una obra que combina mis conocimientos en danza y 
+                                gerontología y que se ha convertido en una valiosa herramienta para la enseñanza de la danza en geriátricos. El 
+                                mismo año comencé a dictar el curso de Formación en Método EDG, el cual obtuvo la Declaración de Interés Cultural 
+                                del Municipio de General Pueyrredón, un reconocimiento que destaca su importancia en la promoción de la salud y 
+                                el bienestar de las personas mayores.
+                                He tenido el honor de ser entrevistada sobre el Método EDG en programas como <b>"Achatando la Curva"</b>, <b>"Modo Danza 
+                                Revista"</b> y <b>“Revista Inquieta”</b>, lo que ha contribuido a difundir esta valiosa herramienta en el ámbito de la 
+                                gerontología y la danza.
                                 </p>
-                            <p class="story2">Además, he participado como expositora en varios congresos relacionados con la gerontología, incluyendo el XVII Congreso Argentino de Geriatría y Gerontología de la SAGG, el II Congreso Internacional de Investigación en Danza en Bogotá, Colombia, y el IV Encuentro Latinoamericano de Investigadores/as Sobre Cuerpos y Corporalidades en las Culturas en Lima, Perú.
-                                Actualmente me encuentro finalizando mis estudios de posgrado en la Universidad Nacional de Mar del Plata para la Especialización en Gerontología y comenzando en la Universidad Nacional de las Artes la Maestría en Tendencias Contemporáneas de la Danza.
-                                Es importante destacar un cambio significativo que estoy llevando a cabo en este momento: la evolución del nombre del Método EDG. Inicialmente lo concebí como "Método para la Enseñanza de Danza en Geriátricos", pero he decidido transformarlo en "Método por una Educación Gerontológica de la Danza". Esta modificación refleja mi creciente visión de una educación más integral y social en el ámbito de la danza y la gerontología. Con este enfoque, pretendo bifurcar las líneas educativas en: clases de danza para personas mayores y formación a los profesionales de danza en gerontología. Este cambio de nombre refleja mi visión de un futuro en el que la danza y la gerontología se fusionen en una experiencia educativa enriquecedora para todas las edades.
-                                Partiendo de esta idea en 2023, participo en las I Jornadas de Disidencias Híbridas, donde propongo por primera vez un taller de reflexiones en torno a la imagen corporal y el envejecimiento para jóvenes y adultos que no estén necesariamente relacionados con la danza.</p>
+                            <p class="story2">Además, he participado como expositora en varios congresos relacionados con la gerontología, 
+                                incluyendo <b>el XVII Congreso Argentino de Geriatría y Gerontología de la SAGG</b>, <b>el II Congreso Internacional de 
+                                Investigación en Danza en Bogotá, Colombia</b>, y <b>el IV Encuentro Latinoamericano de Investigadores/as Sobre Cuerpos 
+                                y Corporalidades en las Culturas en Lima, Perú</b>.
+                                Actualmente me encuentro finalizando mis estudios de posgrado en la Universidad Nacional de Mar del Plata para 
+                                la Especialización en Gerontología y comenzando en la Universidad Nacional de las Artes la Maestría en Tendencias 
+                                Contemporáneas de la Danza.
+                                Es importante destacar un cambio significativo que estoy llevando a cabo en este momento: <b>la evolución del nombre 
+                                del Método EDG</b>. Inicialmente lo concebí como "Método para la Enseñanza de Danza en Geriátricos", pero he decidido 
+                                transformarlo en "Método por una Educación Gerontológica de la Danza". Esta modificación refleja mi creciente 
+                                visión de una educación más integral y social en el ámbito de la danza y la gerontología. Con este enfoque, 
+                                pretendo bifurcar las líneas educativas en: clases de danza para personas mayores y formación a los profesionales 
+                                de danza en gerontología. Este cambio de nombre refleja mi visión de un futuro en el que la danza y la 
+                                gerontología se fusionen en una experiencia educativa enriquecedora para todas las edades.
+                                Partiendo de esta idea en 2023, participo en las I Jornadas de Disidencias Híbridas, donde propongo por primera 
+                                vez un taller de reflexiones en torno a la imagen corporal y el envejecimiento para jóvenes y adultos que no 
+                                estén necesariamente relacionados con la danza.</p>
                         </div>
                     </div>
                 </div>
@@ -203,8 +230,8 @@
                                     <div class="footer-tittle">
                                         <h4>Tienda</h4>
                                         <ul>
-                                            <li><a target="_blank" href="https://www.instagram.com/metodoedg/">Ebook</a></li>
-                                            <li><a target="_blank" href="https://www.instagram.com/metodoedg/">Libro</a></li>
+                                            <li><a target="_blank" href="https://metodoedg.wordpress.com/reservar-mi-libro/">Ebook</a></li>
+                                            <li><a target="_blank" href="https://metodoedg.wordpress.com/reservar-mi-libro/">Libro</a></li>
                                             <li><a target="_blank" href="https://www.udemy.com/course/metodo-edg/?referralCode=8B5458B719EFFF9AF82C">Curso online</a></li>
                                         </ul>
                                     </div>
@@ -217,7 +244,7 @@
                                         <ul>
                                             <li><a target="_blank" href="https://www.udemy.com/course/metodo-edg/?referralCode=8B5458B719EFFF9AF82C">Tienda virtual</a></li>
                                             <li><a target="_blank" href="https://www.instagram.com/metodoedg/">Instagram</a></li>
-                                            <li><a target="_blank" href="https://www.instagram.com/metodoedg/">TikTok</a></li>
+                                            <li><a target="_blank" href="https://www.youtube.com/@metodoedg1782">Youtube</a></li>
                                         </ul>
                                     </div>
                                 </div>
