--- a/contact.html
+++ b/contact.html
@@ -56,6 +56,7 @@
                                 <nav>                              
                                     <ul id="navigation">    
                                         <li><a href="our_story.html">Historia</a></li>
+                                        <li><a href="single-blog.html">El Método</a></li>
                                         <li><a href="https://www.udemy.com/course/metodo-edg/?referralCode=8B5458B719EFFF9AF82C" target="_blank">Tienda</a></li>
                                         <li><a href="contact.html">Contacto</a></li>
                                     </ul>
@@ -204,7 +205,7 @@
                                     <ul>
                                         <li><a target="_blank" href="https://www.udemy.com/course/metodo-edg/?referralCode=8B5458B719EFFF9AF82C">Tienda virtual</a></li>
                                         <li><a target="_blank" href="https://www.instagram.com/metodoedg/">Instagram</a></li>
-                                        <li><a target="_blank" href="https://www.instagram.com/metodoedg/">TikTok</a></li>
+                                        <li><a target="_blank" href="https://www.youtube.com/@metodoedg1782">Youtube</a></li>
                                     </ul>
                                 </div>
                             </div>
