detalles revisados con kta

--- a/index.html
+++ b/index.html
@@ -57,8 +57,16 @@
                                     <ul id="navigation">    
                                         <li><a href="our_story.html">Historia</a></li>
                                         <li><a href="single-blog.html">El Método</a></li>
-                                        <li><a href="https://www.udemy.com/course/metodo-edg/?referralCode=8B5458B719EFFF9AF82C" target="_blank">Tienda</a></li>
-                                        <li><a href="contact.html">Contacto</a></li>
+                                        <li><a href="#">Tienda</a>
+                                            <ul class="submenu">
+                                                <li><a href="https://www.udemy.com/course/metodo-edg/?referralCode=8B5458B719EFFF9AF82C" target="_blank">Curso</a></li>
+                                                <li><a href="https://metodoedg.wordpress.com/reservar-mi-libro/" target="_blank">Libro</a></li>
+                                                <li><a href="https://metodoedg.wordpress.com/reservar-mi-libro/" target="_blank">Ebook</a></li>
+                                            </ul>
+                                        </li>
+                                        <li><a target="_blank" style="text-align: center;" href="https://metodoedg.wordpress.com/docentes-certificados-2/">Docentes<br>Certificados</a></li>
+                                        <li><a target="_blank" style="text-align: center;" href="https://metodoedg.wordpress.com/boletin-edg/">Recursos<br>gratis</a></li>
+                                        <li><a target="_blank" href="https://metodoedg.wordpress.com/contact/">Contacto</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -136,7 +144,7 @@
                         <div class="singl-services text-center mb-60">
                             <div class="top-caption">
                                 <h4>Curso Online</h4>
-                                <p>Plataforma Udemy</p>
+                                <a style="color: black;"href="https://wa.link/ug9slh" target="_blank">Compras en Argentina, contactate conmigo aquí</a><br><br><br>
                             </div>
                             <div class="services-img">
                                 <img src="assets/img/service/service3.png" alt="">
@@ -196,9 +204,6 @@
                 </div>
                 <div class="brand-active brand-border">
                     <div class="single-brand">
-                        <img src="assets/img/service/brand1.jpg" alt="">
-                    </div>
-                    <div class="single-brand">
                         <img src="assets/img/service/brand2.jpg" alt="">
                     </div>
                     <div class="single-brand">
@@ -206,9 +211,6 @@
                     </div>
                     <div class="single-brand">
                         <img src="assets/img/service/brand2.jpg" alt="">
-                    </div>
-                    <div class="single-brand">
-                        <img src="assets/img/service/brand1.jpg" alt="">
                     </div>
                     <div class="single-brand">
                         <img src="assets/img/service/brand3.jpg" alt="">
