--- a/single-blog.html
+++ b/single-blog.html
@@ -57,8 +57,16 @@
                                     <ul id="navigation">    
                                         <li><a href="our_story.html">Historia</a></li>
                                         <li><a href="single-blog.html">El Método</a></li>
-                                        <li><a href="https://www.udemy.com/course/metodo-edg/?referralCode=8B5458B719EFFF9AF82C" target="_blank">Tienda</a></li>
-                                        <li><a href="contact.html">Contacto</a></li>
+                                        <li><a href="#">Tienda</a>
+                                            <ul class="submenu">
+                                                <li><a href="https://www.udemy.com/course/metodo-edg/?referralCode=8B5458B719EFFF9AF82C" target="_blank">Curso</a></li>
+                                                <li><a href="https://metodoedg.wordpress.com/reservar-mi-libro/" target="_blank">Libro</a></li>
+                                                <li><a href="https://metodoedg.wordpress.com/reservar-mi-libro/" target="_blank">Ebook</a></li>
+                                            </ul>
+                                        </li>
+                                        <li><a target="_blank" style="text-align: center;" href="https://metodoedg.wordpress.com/docentes-certificados-2/">Docentes<br>Certificados</a></li>
+                                        <li><a target="_blank" style="text-align: center;" href="https://metodoedg.wordpress.com/boletin-edg/">Recursos<br>gratis</a></li>
+                                        <li><a target="_blank" href="https://metodoedg.wordpress.com/contact/">Contacto</a></li>
                                     </ul>
                                 </nav>
                             </div>
