--- a/index.html
+++ b/index.html
@@ -226,12 +226,11 @@
         <!-- ================ Map ================= -->
 
         <!-- Contact form Start -->
-        <div class="contact-form section-padding2 fix">
+        <!-- <div class="contact-form section-padding2 fix">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 offset-lg-3 offset-xl-3">
                         <div class="form-wrapper">
-                             <!-- section tittle -->
                             <div class="row ">
                                 <div class="col-lg-12">
                                     <div class="section-tittle tittle-form text-center">
@@ -271,14 +270,12 @@
                                     </div>
                                 </div>
                             </form>
-                            <!-- Shape inner Flower -->
                             <div class="shape-inner-flower">
                                 <img src="assets/img/flower/form-smoll-left.png" class="top1" alt="">
                                 <img src="assets/img/flower/form-smoll-right.png" class="top2" alt="">
                                 <img src="assets/img/flower/form-smoll-b-left.png"class="top3"  alt="">
                                 <img src="assets/img/flower/form-smoll-b-right.png"class="top4"  alt="">
                             </div>
-                            <!-- Shape outer Flower -->
                             <div class="shape-outer-flower">
                                 <img src="assets/img/flower/from-top.png" class="outer-top" alt="">
                                 <img src="assets/img/flower/from-bottom.png" class="outer-bottom" alt="">
@@ -287,7 +284,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Contact form End -->
     </main>
 
